cargo_errors.txt
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Blocking waiting for file lock on package cache
    Checking nutri-r-ui v0.1.0 (C:\Users\emele\Repositories\nutri-r)
error[E0432]: unresolved imports `leptos_router::Route`, `leptos_router::Router`, `leptos_router::Routes`
 --> src\app.rs:5:21
  |
5 | use leptos_router::{Route, Router, Routes};
  |                     ^^^^^  ^^^^^^  ^^^^^^ no `Routes` in the root
  |                     |      |
  |                     |      no `Router` in the root
  |                     no `Route` in the root

error[E0282]: type annotations needed
  --> src\app.rs:9:5
   |
 9 | /     view! {
10 | |         <Router>
11 | |             <Navbar />
12 | |             <main class="container mx-auto p-4">
...  |
18 | |         </Router>
19 | |     }
   | |_____^ cannot infer type
   |
   = note: this error originates in the macro `view` (in Nightly builds, run with -Z macro-backtrace for more info)

Some errors have detailed explanations: E0282, E0432.
For more information about an error, try `rustc --explain E0282`.
error: could not compile `nutri-r-ui` (bin "nutri-r-ui") due to 2 previous errors
